# sightedness

./: .gitignore  COPYING  README.md  com.crosine.sightedness.json  meson.build
src/: main.cpp  meson.build
